<resources>
    <string name="app_name">App BSGI</string>

    <string name="novoCadastro">Novo Cadastro</string>
    <string name="resgatarSenha">Esqueci a Senha</string>
    <string name="acessar">Acessar (sem login)</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="salvar">SALVAR</string>
    <string name="voltar">VOLTAR</string>
    <string name="alterar">ALTERAR</string>
    <string name="enviar">ENVIAR</string>
    <string name="limpar">LIMPAR</string>
    <string name="excluir">EXCLUIR</string>
    <string name="pesquisar">PESQUISAR</string>
    <string name="incluirEvento">INCLUIR EVENTO</string>
    <string name="informeEmail">Esqueceu a senha?</string>
    <string name="titPrincipal">Página Principal</string>
    <!--<string name="informeEmail">Por favor, insira seu e-mail:</string> -->
    <!--<string name="informeEmail">Esqueceu a senha? Digite seu e-mail cadastrado:</string> -->

    <string-array name="sexo">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Não informar</item>
    </string-array>

    <string-array name="organizacao">
        <item>Organizacao Xpto</item>
        <item>Organizacao XYZ</item>
        <item>Organizacao YYZ</item>
    </string-array>

    <string-array name="tipoEvento">
        <item>Selecione</item>
        <item>Reunião de Palestra</item>
        <item>Reunião de Bloco</item>
        <item>Encontro Cultural</item>
        <item>Exposição Cultural</item>
        <item>Reunião de estudo</item>

    </string-array>

    <string-array name="cidade">
        <item>Selecione</item>
        <item>Brasília</item>
        <item>Aracaju</item>
        <item>Belém</item>
        <item>Belo Horizonte</item>
        <item>Boa Vista</item>
        <item>Campo Grande</item>
        <item>Cuiabá</item>
        <item>Curitiba</item>
        <item>Florianópolis</item>
        <item>Fortaleza</item>
        <item>Goiânia</item>
        <item>João Pessoa</item>
        <item>Macapá</item>
        <item>Maceió</item>
        <item>Manaus</item>
        <item>Natal</item>
        <item>Palmas</item>
        <item>Porto Alegre</item>
        <item>Porto Velho</item>
        <item>Recife</item>
        <item>Rio de Janeiro</item>
        <item>Roraima</item>
        <item>Salvador</item>
        <item>São Luís</item>
        <item>São Paulo</item>
        <item>Teresina</item>
        <item>Vitória</item>
        <item>Ouro Preto</item>
    </string-array>

    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Bahia</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>